--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
-  "name": "force",
-  "version": "0.0.0",
+  "name": "client",
+  "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "server": "nodemon ./bin/www",
-    "client": "npm start --prefix client",
-    "start": "concurrently \"npm run server\" \"npm run client\""
-  },
   "dependencies": {
-    "concurrently": "^8.0.0",
-    "cookie-parser": "~1.4.4",
-    "crypto": "^1.0.1",
-    "debug": "~2.6.9",
-    "dotenv": "^16.4.6",
-    "express": "^4.21.1",
-    "express-jwt": "^8.4.1",
-    "fast-levenshtein": "^3.0.0",
-    "hbs": "^4.2.0",
-    "http-errors": "~1.6.3",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.8.1",
-    "morgan": "~1.9.1",
-    "nodemon": "^2.0.20",
-    "passport": "^0.7.0",
-    "passport-local": "^1.0.0"
+    "axios": "^1.3.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "5.0.1"
+  },
+  "proxy": "http://localhost:5000",
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
